--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                                 <h3>Modern barber
                                     shop in center
                                     of the city</h3>
-                                    <p>We offer nothing less than what we call a 5 star touch.</p>
+                                    <p>Precision cuts, Classic Shaves, and Timeless Style.</p>
                                 <a href="#" class="boxed-btn3">Appointment</a>
                             </div>
                         </div>
@@ -116,7 +116,7 @@
                                 <h3>Modern barber
                                     shop in center
                                     of the city</h3>
-                                    <p>We offer nothing less than what we call a 5 star touch.</p>
+                                    <p>Step In, Step Out: Transform your look with Our Expert Barbers.</p>
                                 <a href="#" class="boxed-btn3">Appointment</a>
                             </div>
                         </div>
@@ -287,7 +287,6 @@
                                     <h4>Hair Care</h4>
                                 </div>
                                 <div class="single_service">
-                                    </div>
                                     <div class="hair_style_info">
                                         <div class="prise d-flex justify-content-between">
                                             <span>Durag</span>
